syntax = "proto3";

option csharp_namespace = "FileStreaming.GrpcServer.Protos";

package file;

import "google/protobuf/empty.proto";

service FileService{
	rpc FileDownload(FileInfo) returns (stream BytesContent);
	rpc FileUpload(stream BytesContent) returns (google.protobuf.Empty);
}

message BytesContent{
	int64 fileSize = 1;
	bytes buffer = 2;
	int32 readedByte = 3;
	FileInfo info = 4;
}

message FileInfo {
	string fileName = 1;
	string fileExtension = 2;
}